spec/golden/errors/internal_unsafe_build.tn
xs = Array(Int32).unsafe_build(3)
puts xs.size
